<resources>
    <string name="app_name">travelCost</string>
    <string name="distance">Distance</string>
    <string name="total_kilometers">total kilometers</string>
    <string name="price">Price</string>
    <string name="price_per_liter">Price per liter</string>
    <string name="autonomy">Autonomy</string>
    <string name="km_per_liter">km per liter</string>
    <string name="total_spend">Total spend</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">Calculate</string>
    <string name="warning_fill_all_fields">Fill the fields</string>
</resources>